# Sage

./: .env.example  .gitignore  CLAUDE.md  PLAN_A_BACKEND.md  SAGE_FINAL_PRD.md
backend/: PREFLIGHT.md
backend/node/: package-lock.json  package.json
backend/node/scripts/: emit-test-event.js  test-pipeline.js  test-stagehand.js  test-stt.js  test-tts.js
backend/node/src/: bridge.js  stagehand-runner.js  stt.js  tts.js
backend/py/: pyproject.toml  requirements.txt
backend/py/scripts/: check_session.py  cortex_semantic.yaml  migrate.py  migrate.sql  seed.py  seed_history.py  test_snowflake.py  upload_cortex_model.py
backend/py/src/sage/: __init__.py  app.py  cognitive_score.py  cortex_analyst.py  graph.py  models.py  snowflake_io.py  usage.py
backend/py/src/sage/nodes/: browser_agent.py  cognitive.py  memory.py  supervisor.py
backend/py/tests/: conftest.py  test_cognitive_score.py
backend/scripts/: chaos.sh  demo-down.ps1  demo-down.sh  demo-up.ps1  demo-up.sh
