[project]
name = "sage"
version = "0.1.0"
description = "Sage backend orchestrator (LangGraph + FastAPI + Snowflake)."
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "snowflake-connector-python>=3.12.0",
  "snowflake-snowpark-python>=1.24.0",
  "openai>=1.55.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
